add del all and readme

--- a/src/main/resources/static/mainpage.html
+++ b/src/main/resources/static/mainpage.html
@@ -13,7 +13,7 @@
 			<div class="col-md-4">
 				<h1 class="text-center mt-5 mb-4">Proof SFU Wants to Spy on You</h1>
                 <form action="/add.html" class="d-grid gap-2 mb-3">
-                    <input class="btn btn-danger" type="submit" value="Add victim"></input>
+                    <input class="btn btn-danger" type="submit" value="Trap student"></input>
                 </form>
                 <form action="/users/view" class="d-grid gap-2 mb-3">
                     <input class="btn btn-secondary" type="submit" value="View victims"></input>
