--- a/src/main/resources/static/add.html
+++ b/src/main/resources/static/add.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add User</title>
+    <title>Virus installed</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
@@ -20,7 +20,7 @@
 		</div>
 		<div class="row justify-content-center">
 			<div class="col-md-4">
-				<h1 class="text-center mt-5 mb-4">New User</h1>
+				<h1 class="text-center mt-5 mb-4">New Victim</h1>
 				<form action="/users/add" method="post">
                     
 					<div class="mb-3">
